--- a/partials/newheader.hbs
+++ b/partials/newheader.hbs
@@ -5,7 +5,7 @@
       <div class="flexbox">
         <div class="search">
           <div>
-            <input type="text" required>
+            <input type="text" placeholder="     Search all Posts" onfocus="this.placeholder=''" onblur="this.placeholder='     Search all Posts'" required>
           </div>
         </div>
       </div>
