--- a/src/less/code.less
+++ b/src/less/code.less
@@ -647,7 +647,7 @@
       width: 110%;
       height: auto;
       background: #23232e;
-      content: "Javascript" !important;
+      content: "\f3b8" !important;
       color: white;
       display: block;
       font-style: normal;
@@ -656,6 +656,7 @@
       -webkit-font-smoothing: antialiased;
       position: relative;
       margin-left: -40px;
+      
     }
   }
 }
