--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -295,6 +295,9 @@
   }
 
   .page-projects {
+    .container {
+      display: block;
+    }
     .main-content {
       box-shadow: 0 0 5px rgba(65,67,144,.15);
       background: white;
