--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -134,8 +134,6 @@
 			cursor: pointer;
 		}
 	}
-
-
 }
 
 .main-navigation {
@@ -162,7 +160,9 @@
 		list-style: none;
 		align-items: center;
 		position: relative;
-		    z-index: 10;
+		z-index: 10;
+		height: -webkit-fill-available;
+		height: -moz-fill-available;
 
 		#account {
 			width:35px;
@@ -292,7 +292,6 @@
 			}
 		}
 	}
-
 }
 
 .mobile-branding {
