--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -254,6 +254,11 @@
 					line-height: 1.2;
 					font-size: 12px;
 				}
+
+				i {
+					font-size: 22px;
+					height: 20px;
+				}
 				@media(max-width: 800px) {
 					display: none;
 				}
