--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -32,6 +32,7 @@
 @import 'fonts.less';
 @import 'lightbox.less';
 @import 'searchbar.less';
+@import 'fontawesome.less';
 
 /*====================================================
 	about author and comment and next-prev link
