--- a/src/less/signup.less
+++ b/src/less/signup.less
@@ -2,7 +2,8 @@
   position: fixed;
   left: 0;
   right: 0;
-  top: 20%;
+  top: 0;
+  bottom: 0;
   margin: auto;
   overflow: hidden;
   width: 375px;
@@ -44,6 +45,12 @@
   top: 0;
   margin: auto;
   transform: scale(2.5);
+}
+
+#signup-checkbox {
+  position: absolute;
+  left: -300px;
+   width: 56px !important;
 }
 
 #logoGroup {
