--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -244,4 +244,12 @@
     }
   }
 
+  .saas {
+    background: #cfdcf5;
+    color:  #3d5075 !important;
+
+    * {
+      color: #3d5075 !important;
+    }
+  }
 }
