--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -2,6 +2,7 @@
 section > .container {
 	max-width: 1200px;
 	margin: auto;
+	display:flex;
 	@media(max-width: 1200px) {
 		width: 95%;
 		max-width: none;
