--- a/partials/article-preview.hbs
+++ b/partials/article-preview.hbs
@@ -1,5 +1,6 @@
-<a href="{{url}}">
-<div class="article-preview" style="height: 300px;">
+
+<div class="article-preview">
+  <a href="{{url}}">
     <div class="img-wrapper " style="background-image: url({{img_url feature_image absolute="true"}});"></div>
     <div class="description">
       <h5 class="related-title">{{title}}</h5>
@@ -9,5 +10,5 @@
         {{/if}}
       {{/primary_author}}
     </div>
+    </a>
 </div>
-</a>
