--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -49,6 +49,38 @@
 				'</li>';
 		}
 	})
+
+	let navSearch = new GhostSearch({
+		input: '#nav-search',
+		results: '#nav-search-results',
+		options: {
+			limit: 5,
+			keys: [
+				'title',
+				'plaintext'
+			],
+		},
+		api: {
+			resource: 'posts',
+			parameters: {
+				fields: ['title', 'slug', 'plaintext', 'image'],
+				formats: 'plaintext',
+				include: 'tags'
+			},
+		},
+		template: function(result) {
+			$('#nav-search-results').css('opacity', 1);
+			console.log(result);
+			console.log(result.image);
+			let tag = result.tags[0];
+			let url = [location.protocol, '//', location.host].join('');
+			return '<li> \n' +
+				'<img src="' + result.feature_image + '"> \n ' +
+				'<div><a href="' + result.url + '">' + result.title + '</a> \n' +
+				'<span class="tag "> <span class="' + tag.slug + '"><i class="fas fa-tags"></i> ' + tag.name + '</span></span></div> \n ' +
+				'</li>';
+		}
+	})
 </script>
 
 </body>
