--- a/partials/newheader.hbs
+++ b/partials/newheader.hbs
@@ -5,8 +5,9 @@
       <div class="flexbox">
         <div class="search">
           <div>
-            <input type="text" placeholder="     Search all Posts" onfocus="this.placeholder=''" onblur="this.placeholder='     Search all Posts'" required>
+            <input id="nav-search" type="text" placeholder="     Search all Posts" onfocus="this.placeholder=''" onblur="this.placeholder='     Search all Posts'" required>
           </div>
+          <div id="nav-search-results"></div>
         </div>
       </div>
       <div class="account">
