--- a/src/less/article-preview.less
+++ b/src/less/article-preview.less
@@ -5,7 +5,7 @@
   width: 32%;
   transition: all 0.3s ease-out;
   position: relative;
-  height: 300px !important;
+  min-height: 300px;
   box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
   @media(max-width: 600px) {
     margin: 5px 30px;
@@ -38,7 +38,7 @@
 
   .img-wrapper {
     width: 100%;
-    height: 50%;
+    height: 140px;
     background-size: cover;
     background-position: center;
     @media(max-width: 600px) {
