--- a/src/less/searchbar.less
+++ b/src/less/searchbar.less
@@ -1,3 +1,5 @@
+@import "variables.less";
+
 header{
   margin-bottom: 40px;
   box-shadow: 1px 1px 3px rgba(143, 142, 179, 0.2) !important;
@@ -107,9 +109,11 @@ header{
   .search > div > input:focus,
   .search > div > input:valid,
   .search > div > input:hover  {
-    width: 150px;
+    width: 200px;
     padding: 13px;
-    background: rgba(0, 0, 0, 0.32);
+    background: rgba(0, 0, 0, 0.2);
+    border: solid 1px #fff!important;
+    border-radius:3px;
 
     &:after{
       opacity: 0;
@@ -143,7 +147,7 @@ header{
 
 .navigation {
   background: white;
-  height: 45px;
+  height: 50px;
   text-align: center;
 
   .menu {
@@ -163,6 +167,89 @@ header{
       font-size: .9em;
       font-family: HackerSans-Medium;
       text-transform: uppercase;
+    }
+  }
+}
+
+#nav-search-results {
+  width: 200px;
+  position: absolute;
+  font-size: 1em;
+  font-family: CompassSans-Light,CompassSans-Light,sans-serif!important;
+  font-weight: 200;
+  transition: 0.3s all;
+  outline: none;
+  -webkit-appearance: none;
+  border: 1px solid #cfd3e0;
+  border-radius: 2px;
+  border-top: 0;
+  opacity: 0;
+  z-index: 10;
+
+  * {
+    transition: 0.3s all;
+  }
+
+  li {
+    width: 90%;
+    padding: 15px 5%;
+    text-align: left;
+    display: flex;
+    justify-content: space-between;
+    background: #fff;
+
+    &:nth-child(even) {
+      background: #f5f8fb;
+    }
+
+    &:hover {
+      background: lighten(@theme-color, 10%);
+      color: white;
+      border: 0;
+
+      a {
+        color: white;
+      }
+    }
+
+    img {
+      height: 55px;
+      width: 133px;
+      overflow: hidden;
+      margin-right: 15px;
+    }
+
+    div {
+      width: 100%;
+
+      a {
+        display: block;
+        line-height: 1.4;
+        font-size: 0.9em;
+        -webkit-line-clamp: 2;
+        font-weight: 600;
+      }
+
+      .tag {
+        display: block;
+        line-height: 1.5;
+
+        span {
+          font-size: 0.7em;
+          font-weight: 100;
+          line-height: 1.5;
+          padding: 5px 10px;
+          margin-top: 4px;
+          display: block;
+          width: fit-content;
+
+          i {
+            margin-right: 4px;
+            font-size: 0.7em;
+            display: none;
+          }
+        }
+      }
     }
   }
 }
