--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -156,7 +156,7 @@
 		display: flex;
 		justify-content: space-between;
 		padding: 30px 40px 0 0;
-		margin: 0;
+		margin: 0 auto;
 		list-style: none;
 		align-items: center;
 		position: relative;
@@ -170,15 +170,12 @@
 			background-color: rgba(255, 255,255, 0);
 			padding: 7px;
 			transition: all .1s ease-out;
-			 position: relative;
+			position: relative;
 			border-right: 1px solid rgba(255, 255,255, 0);
-
-
-			@media(max-width: 800px) {
-		  }
 
 			&:hover {
 				cursor: pointer;
+				opacity: .6;
 			}
 
 			.accountback {
