--- a/src/less/page.less
+++ b/src/less/page.less
@@ -5,15 +5,19 @@
   background: #ecf1f9;
   display: inline-block;
 
+  section {
+        margin-top: 15px;
+  }
+
   .post-navbar {
     display: none;
-    padding: 10px 0 0 25px;
+    /*padding: 10px 0 0 25px;
     @media(max-width: 800px) {
       display: block;
       display: relative;
       padding: 0;
       padding-right:15px;
-    }
+    }*/
   }
 
   .featured-media {
