--- a/src/less/signup.less
+++ b/src/less/signup.less
@@ -155,7 +155,7 @@ input {
 #signup-email {
   padding: 14px 15px;
   width: 300px;
-  background: rgba(255,255,255,0.35);
+  background: rgba(255,255,255,0.3);
   border-radius: 3px;
   font-size: 13px;
   color: #FFFFFF;
@@ -198,6 +198,7 @@ button {
   -webkit-appearance: none;
   -moz-appearance: none;
   border: none;
+  font-size: 1em;
 }
 
 #signup-gravatar{
@@ -215,7 +216,7 @@ button {
 ::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: #fff;
-  opacity: 0.7;
+  opacity: 0.8;
   /* Firefox */
 }
 
