--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -144,7 +144,7 @@
 		}
 	}
 
-	
+
 
 	#my-custom-results {
 		font-size: 1em;
@@ -657,7 +657,7 @@
 
 		.form-group,
 		.input-group {
-			margin-bottom: 10px;
+			margin-bottom: 0;
 			display: block;
 
 			.email {
