--- a/partials/signup2.hbs
+++ b/partials/signup2.hbs
@@ -32,6 +32,8 @@
 
 <script>
   $(document).ready(function() {
+    $('#signup-subscription').css('opacity', 0);
+    $('#signup-subscription').css('position', 'absolute');
     $('#signup-form').ajaxForm({
       beforeSubmit: validate
     });
