--- a/src/less/code.less
+++ b/src/less/code.less
@@ -114,14 +114,14 @@
   .language-python,
   .python.hljs {
     color: #e4f8fd !important;
-    background: #262f44!important;
+    background: #334163!important;
 
     &::before {
       margin-bottom: 20px;
       margin-left: -40px;
       width: 110%;
       height: auto;
-      background: #1e2538 !important;
+      background: #28334e !important;
       content: "Python" !important;
       display: block;
       font-style: normal;
@@ -656,7 +656,7 @@
       -webkit-font-smoothing: antialiased;
       position: relative;
       margin-left: -40px;
-      
+
     }
   }
 }
