--- a/src/less/comments.less
+++ b/src/less/comments.less
@@ -1,9 +1,10 @@
 #comment-box {
   background: white;
   display:none;
+  margin-bottom: 25px;
+
+  
   .body {
-    padding-left: 15px;
-    padding-right: 15px;
     padding: 40px 60px 20px;
 
 
@@ -70,7 +71,8 @@
           background-color: #5bbdde;
           border-radius: 0;
           font-size: 0.9em;
-          padding: 11px 13px;
+          padding: 10px;
+          width: 180px;
           border: none;
           transition: all 0.3s ease-out;
           float: right;
