--- a/post.hbs
+++ b/post.hbs
@@ -69,9 +69,9 @@
 								</div>
 							</footer>
 						</div>
-						{{> comments}}
 					</article>
 
+					{{!--{{> comments}}--}}
 					{{> about-author}}
 					{{#author include="count.posts"}}{{> author-card}}{{/author}}
 					{{> prev-next}}
