--- a/src/less/signup.less
+++ b/src/less/signup.less
@@ -254,15 +254,15 @@ button {
 
 .signup-head,
 .confirm-head {
-  margin: auto;
-  display: block;
-  left: 0;
-  top: 31%;
-  right: 0;
-  color: white;
+  margin: auto !important;
+  display: block !important;
+  left: 0 !important;
+  top: 31% !important;
+  right: 0 !important;
+  color: white !important;
   font-family: CompassSans-Medium;
-  letter-spacing: 4px;
-  font-size: 3em;
+  letter-spacing: 4px !important;
+  font-size: 3em !important;
   margin: 0 auto;
   display: block;
   width: fit-content;
