--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -5,38 +5,46 @@
 
   <div class="column swiper-slide b">
   <div id="backlog">
-    <h2>Backlog</h2>
-    <span class="count"></span>
+    <div class="column-head">
+      <h2>Backlog</h2>
+      <span class="count"></span>
+    </div>
     <div class="cards"></div>
   </div>
 </div>
 
 <div class="column swiper-slide t">
   <div id="todo">
-    <h2>To Do</h2>
-    <span class="count"></span>
+    <div class="column-head">
+      <h2>To Do</h2>
+      <span class="count"></span>
+    </div>
     <div class="cards"></div>
   </div>
   </div>
 
   <div class="column swiper-slide p">
   <div id="progress">
-    <h2>In Progess</h2>
-    <span class="count"></span>
+    <div class="column-head">
+      <h2>In Progress</h2>
+      <span class="count"></span>
+    </div>
     <div class="cards"></div>
   </div>
-  </div>
+</div>
 
   <div class="column swiper-slide d">
   <div id="done">
-    <h2>Done</h2>
-    <span class="count"></span>
+    <div class="column-head">
+      <h2>Done</h2>
+      <span class="count"></span>
+    </div>
     <div class="cards"></div>
   </div>
 </div>
 
 </div>
-<div class="swiper-pagination"></div>
+  <div class="swiper-pagination"></div>
 </div>
 
 <!-- If we need pagination -->
