--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -138,6 +138,13 @@
         width: 90% !important;
       }
 
+      .column-head {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+            margin-top: 10px;
+      }
+
       &.b {
         &::before {
           content: "";
@@ -386,7 +393,7 @@
       .count {
         color: #ababab;
         font-size: 14px;
-        font-family: proxima-nova,sans-serif;
+        font-family: 'CompassSans-Regular',sans-serif;
         bottom: 0;
         padding: 4px;
         float: right;
