signup form error

--- a/partials/widget-footernewsletter.hbs
+++ b/partials/widget-footernewsletter.hbs
@@ -1,4 +1,4 @@
-<div class="widget newsletter">
+<div id="newsletter-footer" class="widget newsletter">
     <h3 class="title">{{t "Newsletter"}}</h3>
 	 <div class="newsletter input-group">
     <p class="news-description">Are you into data to the point where it's almost embarrasing? Toss your email in for occasional updates, and we'll promise to only give you the good stuff.</p>
