--- a/src/less/login.less
+++ b/src/less/login.less
@@ -248,7 +248,8 @@
   height: 100%;
   width: 100%;
   position: fixed;
-  background: black;
+  background: linear-gradient(315deg, #000629, #200826);
+  mix-blend-mode: hard-light;
   opacity: 0;
   display: none;
   transition: all .3s ease-out;
