--- a/src/less/searchbar.less
+++ b/src/less/searchbar.less
@@ -58,6 +58,8 @@ header{
 
   .search {
     margin: 0;
+    position: absolute;
+    right: 60px;
   }
 
   .search > h3 {
@@ -169,8 +171,8 @@ header{
     align-items: center;
     height: -webkit-fill-available;
     height: -moz-fill-available;
-    margin-bottom: 20px;
     max-width: 400px;
+    height: 50px;
 
     @media(max-width: 600px) {
       width: 300px;
