--- a/src/less/signup.less
+++ b/src/less/signup.less
@@ -61,6 +61,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background: url("../images/logo.svg");
+  margin-bottom: 30px;
   height: 51px;
   width: 32px;
   margin: auto;
@@ -136,7 +137,7 @@ input {
 .text-signup {
   position: absolute;
   left: 50%;
-  top: 31%;
+  top: 34%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   /*    opacity: 0;*/
@@ -150,12 +151,16 @@ input {
   transform: translate(-50%, -50%);
 }
 
+#signup-username {
+  margin-bottom: 10px;
+}
+
 .form-control,
 #signup-username,
 #signup-email {
   padding: 14px 15px;
   width: 300px;
-  background: rgba(255,255,255,0.3);
+  background: rgba(255,255,255,1);
   border-radius: 3px;
   font-size: 13px;
   color: #FFFFFF;
