--- a/partials/widget-sidebarnewsletter.hbs
+++ b/partials/widget-sidebarnewsletter.hbs
@@ -1,4 +1,4 @@
-<div class="widget newsletter">
+<div id="newsletter-sidebar" class="widget newsletter">
     <h3 class="title">{{t "Newsletter"}}</h3>
 	 <div class="newsletter input-group">
     <p class="news-description">Are you into data to the point where it's almost embarrasing? Toss your email in for occasional updates, and we'll promise to only give you the good stuff.</p>
@@ -6,7 +6,7 @@
       <section class="gh-subscribe">
         {{subscribe_form
           placeholder="Your email address"
-          input_class="subscribe-email"
+          input_class="subscribe-input-class"
           button_class="btn"
           form_class="newsletter-form"
           form_id="sidebar-newsletter-form"
