--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -34,6 +34,97 @@
 		padding: 30px;
 	}
 
+	#newsletter-footer {
+		max-width: 30%;
+		padding: 13px 20px;
+		font-size: 16px;
+		color: #fff;
+		border: 0;
+		text-transform: Uppercase;
+		transition: all 0.3s ease-out;
+		position: relative;
+
+		.form-group {
+			padding: 0;
+			position: relative;
+			overflow: hidden;
+
+			input::placeholder {
+				color: grey;
+			}
+
+			&::after {
+				content: '\f0e0';
+				font-family: "Font Awesome 5 Pro";
+				font-weight: 400;
+				display: inline-block;
+				font-style: normal;
+				-webkit-font-feature-settings: normal;
+				font-feature-settings: normal;
+				font-variant: normal;
+				text-rendering: auto;
+				-webkit-font-smoothing: antialiased;
+				right: 17px;
+				top: 11px;
+				position: absolute;
+				color: #9aa1bd;
+				font-size: 1.1em;
+			}
+
+			button {
+				width: 100%;
+				background: #039c8c;
+				padding: 13px 20px;
+				font-size: 16px;
+				color: white;
+				border: 0;
+				text-transform: Uppercase;
+				transition: all 0.3s ease-out;
+
+				span {
+					font-size: 14px;
+				}
+
+				&:hover {
+					background: @hover-color;
+				}
+			}
+
+			input {
+				font-weight: 100;
+				border: 1px solid #d5dbe6;
+				transition: all 0.3s all;
+				width: -webkit-fill-available;
+				margin-bottom: 10px;
+				padding: 14px 15px;
+				border: 0;
+				border-radius: 3px;
+				background: #fff;
+				color: #fff;
+				font-size: 13px;
+				font-weight: 200;
+				letter-spacing: 1px;
+
+				&::placeholder {
+					opacity: 0.7;
+				}
+
+				&:hover {
+					background: #e5f9ff;
+					border-color: #bbd8e2;
+
+					&::placeholder {
+						opacity: 0.1;
+					}
+				}
+
+				&:focus {
+					background: white;
+				}
+			}
+		}
+	}
+
 	.newsletter {
 		padding: 13px 40px 0 0;
 
@@ -48,7 +139,6 @@
 			text-align: justify;
 			margin-top: 0;
 			color: white;
-
 			@media(max-width: 800px) {
 				margin-bottom: 15px;
 				text-align: left;
@@ -176,7 +266,6 @@
 			margin: 10px 0 15px !important;
 			font-size: 1.5em;
 			text-shadow: -1px 1px 1px #133e6d;
-
 			@media(max-width: 800px) {
 				margin: 10px 0 30px!important !important;
 				font-size: 1.3em;
@@ -251,97 +340,12 @@
 						border-radius: 0;
 						margin: 0;
 						border-bottom: 1px solid #2a4488;
-	    			border-right: 1px solid #2a4488;
+						border-right: 1px solid #2a4488;
 					}
 				}
 			}
 
-			.widget .newsletterbtn-footer {
-				width: 100%;
-				background: linear-gradient(165deg,#40a2a2,#1f68a7);
-				padding: 13px 20px;
-				font-size: 16px;
-				color: #fff;
-				border: 0;
-				text-transform: Uppercase;
-				transition: all 0.3s ease-out;
-			}
 
-			.newsletter {
-				input::placeholder {
-					color: grey;
-				}
-
-				.form-group {
-					position: relative;
-
-					&::after {
-						content: '\f0e0';
-						font-family: "Font Awesome 5 Pro";
-						font-weight: 400;
-						display: inline-block;
-						font-style: normal;
-						-webkit-font-feature-settings: normal;
-						font-feature-settings: normal;
-						font-variant: normal;
-						text-rendering: auto;
-						-webkit-font-smoothing: antialiased;
-						right: 17px;
-						top: 11px;
-						position: absolute;
-						color: #9aa1bd;
-						font-size: 1.1em;
-					}
-				}
-
-				button {
-					width: 100%;
-					background: #039c8c;
-					padding: 13px 20px;
-					font-size: 16px;
-					color: white;
-					border: 0;
-					text-transform: Uppercase;
-					transition: all 0.3s ease-out;
-
-					span {
-						font-size: 14px;
-					}
-
-					&:hover {
-						background: @hover-color;
-					}
-				}
-
-				input {
-					font-weight: 100;
-					border: 1px solid #d5dbe6;
-					transition: all 0.3s all;
-
-					&::placeholder {
-						opacity: 0.7;
-					}
-
-					&:hover {
-						background: #e5f9ff;
-						border-color: #bbd8e2;
-
-						&::placeholder {
-							opacity: 0.1;
-						}
-					}
-
-					&:focus {
-						background: white;
-					}
-				}
-
-				.gh-subscribe-rss {
-					padding-top: 10px;
-					display: block;
-					text-align: right;
-				}
-			}
 
 			.recent-single-post,
 			.single-author {
