--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -144,8 +144,6 @@
 		}
 	}
 
-
-
 	#my-custom-results {
 		font-size: 1em;
 		font-family: CompassSans-Light,CompassSans-Light,sans-serif!important;
@@ -304,16 +302,71 @@
 		.fb {
 			height: 220px;
 		}
+	}
 
-		.newsletter {
-			input::placeholder {
-				color: #828294;
+	#newsletter-sidebar {
+		.form-group {
+
+			input[type="text"],
+			input[type="email"] {
+				font-weight: 100;
+				border: 1px solid #d5dbe6 !important;
+				transition: all 0.3s all;
+				width: 300px;
+				margin-bottom: 10px;
+				padding: 14px 15px;
+				border: 0;
+				border-radius: 3px;
+				background: #fff;
+				color: #fff;
+				font-size: 13px;
+				font-weight: 200;
+				letter-spacing: 1px;
+				font-weight: 100;
+				border: 1px solid #d5dbe6;
+				transition: all 0.3s all;
+
+				&::placeholder {
+					opacity: 0.85;
+					color: #828294;
+				}
+
+				&:hover {
+					background: #e5f9ff !important;
+					border-color: #bbd8e2 !important;
+
+					&::placeholder {
+						opacity: 0.1;
+					}
+				}
+
+				&:focus {
+					background: white;
+				}
 			}
 
-			.form-group {
-				position: relative;
+			input[type=email] {
+				&:after {
+					content: '\f0e0';
+					font-family: "Font Awesome 5 Pro";
+					font-weight: 100;
+					display: inline-block;
+					font-style: normal;
+					-webkit-font-feature-settings: normal;
+					font-feature-settings: normal;
+					font-variant: normal;
+					text-rendering: auto;
+					-webkit-font-smoothing: antialiased;
+					right: 17px;
+					top: 11px;
+					position: absolute;
+					color: #9aa1bd;
+					font-size: 1.1em;
+				}
+			}
 
-				&::after {
+			input[name=username] {
+				&:after {
 					content: '\f0e0';
 					font-family: "Font Awesome 5 Pro";
 					font-weight: 100;
@@ -350,176 +403,147 @@
 					background: @hover-color;
 				}
 			}
-
-			input {
-				font-weight: 100;
-				border: 1px solid #d5dbe6;
-				transition: all 0.3s all;
-
-				&::placeholder {
-					opacity: 0.85;
-				}
-
-				&:hover {
-					background: #e5f9ff;
-					border-color: #bbd8e2;
-
-					&::placeholder {
-						opacity: 0.1;
-					}
-				}
-
-				&:focus {
-					background: white;
-				}
-			}
-
-			.gh-subscribe-rss {
-				padding-top: 10px;
-				display: block;
-				text-align: right;
-			}
-		}
-
-		&.series {
-			.post-title {
-				color: #455f6f;
-				line-height: 1.3;
-				letter-spacing: 0;
-				font-size: 16px;
-				margin: 0;
-				font-family: CompassSans-Regular,CompassSans-Medium,CompassSans-Light,sans-serif;
-				font-weight: 500;
-				display: inline-block;
-			}
-
-			.recent-single-post {
-				border-bottom: 1px solid #d5dde8;
-				margin-bottom: 10px;
-				overflow: hidden;
-				display: inline-block;
-				align-items: center;
-				display: flex;
-				padding: 0 0 12px !important;
-
-				&:last-of-type {
-					border-bottom: 0;
-				}
-			}
-
-			.series-image {
-				height: 63px;
-				min-width: 90px;
-				display: flex;
-				align-items: center;
-				background-size: cover!important;
-				margin-right: 20px;
-				border-radius: 2px;
-				@media(max-width: 1000px) {
-					display: none;
-				}
-			}
-
-			.series-info {
-				@media(max-width: 1000px) {
-					padding: 5px 15px;
-					background: 0;
-				}
-			}
-
-			& > a {
-				display: none;
-			}
-
-			.count {
-				float: right;
-				color: #888888;
-				font-size: 11px;
-			}
-
-			.recent-single-post {
-				padding: 0;
-
-				&:nth-of-type(1) {
-					display: none;
-				}
-			}
-
-			p {
-				color: #444444;
-				font-size: 12px;
-				opacity: 0.7;
-				margin: 0;
-				white-space: inherit;
-				width: aauto;
-				display: inline-block;
-				line-height: 1.5;
-				width: auto;
-				padding-right: 10px;
-			}
 		}
 	}
 
-	.recent-single-post {
+	.series {
 		.post-title {
 			color: #455f6f;
-			line-height: 1.4;
-			font-size: 15px;
+			line-height: 1.3;
+			letter-spacing: 0;
+			font-size: 16px;
 			margin: 0;
-			font-family: 'CompassSans-Regular', 'CompassSans-Light', sans-serif;
-			font-weight: 100;
+			font-family: CompassSans-Regular,CompassSans-Medium,CompassSans-Light,sans-serif;
+			font-weight: 500;
 			display: inline-block;
-
-			&:hover {
-				color: @hover-color;
-			}
-		}
-	}
-
-	.upcoming {
-		p {
-			margin-bottom: 0;
 		}
 
-		ul {
-			padding: 10px 0 0;
-		}
-	}
+		.recent-single-post {
+			border-bottom: 1px solid #d5dde8;
+			margin-bottom: 10px;
+			overflow: hidden;
+			display: inline-block;
+			align-items: center;
+			display: flex;
+			padding: 0 0 12px !important;
 
-	.text {
-		h1 {
-			font-size: 1.5em;
-			font-weight: 700;
-			margin-bottom: 15px;
-			letter-spacing: 1px;
-			margin-top: 0;
-			white-space: nowrap;
-			font-family: CompassSans-Medium,CompassSans-Medium,serif;
-			@media(max-width: 1040px) {
-				font-size: 1.3em;
+			&:last-of-type {
+				border-bottom: 0;
 			}
 		}
 
+		.series-image {
+			height: 63px;
+			min-width: 90px;
+			display: flex;
+			align-items: center;
+			background-size: cover!important;
+			margin-right: 20px;
+			border-radius: 2px;
+			@media(max-width: 1000px) {
+				display: none;
+			}
+		}
+
+		.series-info {
+			@media(max-width: 1000px) {
+				padding: 5px 15px;
+				background: 0;
+			}
+		}
+
+		& > a {
+			display: none;
+		}
+
+		.count {
+			float: right;
+			color: #888888;
+			font-size: 11px;
+		}
+
+		.recent-single-post {
+			padding: 0;
+
+			&:nth-of-type(1) {
+				display: none;
+			}
+		}
+
 		p {
+			color: #444444;
+			font-size: 12px;
+			opacity: 0.7;
 			margin: 0;
-			font-size: 1em;
-			line-height: 1.8;
-			padding-right: 0;
+			white-space: inherit;
+			width: aauto;
+			display: inline-block;
+			line-height: 1.5;
+			width: auto;
+			padding-right: 10px;
+		}
+	}
+}
+
+.recent-single-post {
+	.post-title {
+		color: #455f6f;
+		line-height: 1.4;
+		font-size: 15px;
+		margin: 0;
+		font-family: 'CompassSans-Regular', 'CompassSans-Light', sans-serif;
+		font-weight: 100;
+		display: inline-block;
+
+		&:hover {
+			color: @hover-color;
+		}
+	}
+}
+
+.upcoming {
+	p {
+		margin-bottom: 0;
+	}
+
+	ul {
+		padding: 10px 0 0;
+	}
+}
+
+.text {
+	h1 {
+		font-size: 1.5em;
+		font-weight: 700;
+		margin-bottom: 15px;
+		letter-spacing: 1px;
+		margin-top: 0;
+		white-space: nowrap;
+		font-family: CompassSans-Medium,CompassSans-Medium,serif;
+		@media(max-width: 1040px) {
+			font-size: 1.3em;
 		}
 	}
 
-	.post-title {
-		a {
-			color: #208cad;
-			font-family: 'CompassSans-Regular', 'CompassSans-Light', sans-serif;
-			transition: all 0.2s ease;
-			font-size: 15px !important;
-			font-weight: 600 !important;
+	p {
+		margin: 0;
+		font-size: 1em;
+		line-height: 1.8;
+		padding-right: 0;
+	}
+}
 
-			&:hover {
-				cursor: pointer;
-				color: @hover-color;
-			}
+.post-title {
+	a {
+		color: #208cad;
+		font-family: 'CompassSans-Regular', 'CompassSans-Light', sans-serif;
+		transition: all 0.2s ease;
+		font-size: 15px !important;
+		font-weight: 600 !important;
+
+		&:hover {
+			cursor: pointer;
+			color: @hover-color;
 		}
 	}
 }
@@ -649,10 +673,11 @@
 			width: 100%;
 		}
 
-		.subscribe-email {
+		.subscribe-input-class {
 			padding: 15px 5%;
 			width: 90%;
 			font-size: 14px;
+			border: 1px solid #ebebeb;
 		}
 
 		.form-group,
