signup form error

--- a/partials/signup2.hbs
+++ b/partials/signup2.hbs
@@ -9,7 +9,7 @@
   <p class="description" style="visibility: hidden;">Automation is inevitable. Join the winning side.</p>
   <p class="text_max un" style="visibility: hidden;">Step up your shitposting game.</p>
 
-  <form id="signup-form" action="https://getform.io/f/72bfedad-b346-4add-a585-2a93b63ea28f" method="POST" class="signup-form un" style="visibility:hidden;">
+  <form id="signup-form" action="https://us-central1-hackersandslackers-204807.cloudfunctions.net/new-account" method="POST" class="signup-form un" style="visibility:hidden;">
     <input id="signup-username" type="text" name="username" placeholder="username" required>
     <input id="signup-email" type="email" name="email" autocomplete="email" placeholder="youremail@example.com" required>
     <input id="signup-gravatar" type="text" name="gravatar" visibility="hidden">
