--- a/src/less/login.less
+++ b/src/less/login.less
@@ -248,7 +248,7 @@
   height: 100%;
   width: 100%;
   position: fixed;
-  background: linear-gradient(315deg, #000629, #200826);
+  background: linear-gradient(315deg, #02061d, #17031c);
   mix-blend-mode: hard-light;
   opacity: 0;
   display: none;
