--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -99,11 +99,15 @@
 		margin: 0 0 20px;
 
 		.post-title {
-			font-size: 2.2em;
+			font-size: 1em;
 			Line-height: 1.15;
 			margin: 0 0 10px;
 			font-weight: 900;
 			font-family: 'HackerSans-Medium', 'CompassSans-Regular';
+
+			a {
+				font-size: 2.2em !important;
+			}
 			@media(max-width: 600px) {
 				font-size: 1.45em;
 				margin: 0 0 10px;
