--- a/src/less/signup.less
+++ b/src/less/signup.less
@@ -9,12 +9,12 @@
   width: 375px;
   height: 667px;
   background-image: linear-gradient(135deg, #29DAC6 0%, #329DE3 100%);
-  box-shadow: 0 0 24px 0 rgba(0,0,0,0.1);
   z-index: 500;
+  box-shadow: 2px 2px 28px rgba(0, 0, 0, 0.76);
 
-  .description,
-  .confirm-description {
-    color: white;
+  .confirm-description,
+  .description {
+    color: #fff;
     width: 258px;
     margin: 30px auto auto;
     text-align: center;
@@ -50,7 +50,7 @@
 #signup-checkbox {
   position: absolute;
   left: -300px;
-   width: 56px !important;
+  width: 56px !important;
 }
 
 #logoGroup {
@@ -75,21 +75,24 @@
   width: 100px;
 }
 
-input {
+input[type="text"],
+input[type="email"], {
   border-radius: 0 !important;
+  transition: all .2s ease-out;
 
   &:-webkit-autofill {
     -webkit-box-shadow: 0 0 0 100px white inset;
   }
 
-  &:hover{
-    border: 1px solid rgba(255, 255, 255, 0.58)
+  &:hover {
+    border: 1px solid #004b5dbd;
+    color: white;
+    background: rgba(140, 255, 247, 0.45) !important;
+    box-shadow: inset -2px 2px 4px #0d234c59 !important;
   }
 
   &:focus {
-    border: 1px solid #c7e4f3 !important;
-    color: white;
-    background: rgba(140, 255, 247, 0.45);
+    background: white !important;
   }
 }
 
@@ -155,15 +158,15 @@ input {
   margin-bottom: 10px;
 }
 
-.form-control,
+#signup-email,
 #signup-username,
-#signup-email {
+.form-control {
   padding: 14px 15px;
   width: 300px;
   background: rgba(255,255,255,1);
   border-radius: 3px;
   font-size: 13px;
-  color: #FFFFFF;
+  color: #91c6ce;
   letter-spacing: 1px;
   border: 0;
   margin-bottom: 10px;
@@ -179,6 +182,7 @@ input {
   border: 0;
   padding: 14px 15px !important;
   width: 300px !important;
+  color: #0c3d44;
 }
 
 button {
@@ -194,45 +198,51 @@ button {
 button {
   padding: 13px 15px;
   width: 330px;
-  color: #31A4E0;
-  background-color: #fff;
+  color: #fff;
+  background: #03ccb7;
+  box-shadow: 2px 2px 3px 0 #239084;
   margin-top: 15px;
   letter-spacing: 1px;
-  font-weight: 400;
-  box-shadow: 0 5px 11px 0 #0000001a;
+  font-weight: 600;
   -webkit-appearance: none;
   -moz-appearance: none;
   border: none;
   font-size: 1em;
 }
 
-#signup-gravatar{
+#signup-gravatar {
   visibility: hidden;
-    position: absolute;
-    top: 0;
+  position: absolute;
+  top: 0;
 }
 
-
-.signup-form input:focus::placeholder {
+input:focus{
   opacity: 1;
+}
+
+input:placeholder {
+  opacity: 0.7;
+  color: #91c6ce;
   /* Firefox */
 }
 
-::placeholder {
+input:placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: #fff;
-  opacity: 0.8;
+  color: #91c6ce;
+  opacity: 0.7;
   /* Firefox */
 }
 
 :-ms-input-placeholder {
   /* Internet Explorer 10-11 */
-  color: #fff;
+  color: #91c6ce;
+  opacity: 0.7;
 }
 
 ::-ms-input-placeholder {
   /* Microsoft Edge */
-  color: #fff;
+  color: #91c6ce;
+  opacity: 0.7;
 }
 
 .options a {
@@ -257,8 +267,8 @@ button {
   bottom: 3%;
 }
 
-.signup-head,
-.confirm-head {
+.confirm-head,
+.signup-head {
   margin: auto !important;
   display: block !important;
   left: 0 !important;
