--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -99,6 +99,7 @@
 				border: 1px solid #d5dbe6;
 				transition: all 0.3s all;
 				width: -webkit-fill-available;
+				width: -moz-fill-available;
 				margin-bottom: 10px;
 				padding: 14px 15px;
 				border: 0;
