--- a/src/less/signup.less
+++ b/src/less/signup.less
@@ -196,7 +196,7 @@ button {
 
 .button-control,
 button {
-  padding: 13px 15px;
+  padding: 13px 0;
   width: 330px;
   color: #fff;
   background: #03ccb7;
