--- a/src/less/signup.less
+++ b/src/less/signup.less
@@ -208,6 +208,10 @@ button {
   -moz-appearance: none;
   border: none;
   font-size: 1em;
+
+  &:hover {
+    box-shadow: 2px 2px 3px 0 #647498;
+  }
 }
 
 #signup-gravatar {
