--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -8,6 +8,10 @@
     height: 370px;
     background-size: cover !important;
   }
+
+  .post-title a {
+     font-size: 1em !important;
+  }
 }
 
 .meta-item {
