--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -388,6 +388,7 @@
 			button {
 				width: 100%;
 				background: linear-gradient(165deg,#40a2a2,#1f68a7);
+				box-shadow: 2px 2px 3px 0 #647498;
 				padding: 13px 20px;
 				font-size: 16px;
 				color: white;
@@ -401,6 +402,7 @@
 
 				&:hover {
 					background: @hover-color;
+				  box-shadow: 2px 2px 3px 0 #239084;
 				}
 			}
 		}
