--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -98,8 +98,7 @@
 				font-weight: 100;
 				border: 1px solid #d5dbe6;
 				transition: all 0.3s all;
-				width: -webkit-fill-available;
-				width: -moz-fill-available;
+				width: 100%;
 				margin-bottom: 10px;
 				padding: 14px 15px;
 				border: 0;
