--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -106,7 +106,7 @@
 			font-family: 'HackerSans-Medium', 'CompassSans-Regular';
 
 			a {
-				font-size: 2.2em !important;
+				font-size: 2.2em;
 			}
 			@media(max-width: 600px) {
 				font-size: 1.45em;
