--- a/src/less/postlist.less
+++ b/src/less/postlist.less
@@ -1,7 +1,7 @@
 @import "variables.less";
 @import "mixin.less";
 
-.tag-template {
+.tag-template, {
   .postlist {
     display: flex;
     justify-content: space-between;
