--- a/src/less/series.less
+++ b/src/less/series.less
@@ -3,9 +3,26 @@
     display:flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 15px;
+
+
+    .details {
+      min-width: -webkit-fill-available;
+      padding: 20px;
+
+      .post-head {
+            width: 460px;
+      }
+    }
 
     .featured-media {
-      width: 200px;
+      min-width: 250px;
+      height: 200px;
+      margin: 0;
+    }
+
+    .post-title a {
+          font-size: 1.8em !important;
     }
   }
 }
