--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -121,11 +121,11 @@
   }
 
   .excel {
-    color: #136713;
+    color: #2aa62a;
     background-color: lighten(#136713, 70%);
 
     * {
-      color: #136713 !important;
+      color: #2aa62a !important;
     }
   }
 
