--- a/series.hbs
+++ b/series.hbs
@@ -1,6 +1,7 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
+
 <section class="content-wrap series-template">
 	<div class="container">
 			<!-- end main post area -->
@@ -8,15 +9,16 @@
 			{{> sidebar}}
 				<!-- start main post area -->
 				<div class=" main-content">
-					{{#is "tag"}}
-						{{> cover-tag}}
-					{{/is}}
 					<div class="postlist">
-            {{#foreach posts}}
+            {{> cover-tag}}
+            {{#foreach posts include="tags"}}
             		{{> seriespreview}}
-            {{/foreach}} {{pagination}}
+            {{/foreach}}
+    				{{pagination}}
+
 					</div>
 				</div>
 	</div>
 </section>
+
 <!-- end site's main content area -->
