makeshift series page

--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -13,7 +13,7 @@
 
   <div class="content">
     <div class="post-head">
-      <h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
+      <h2 class="post-title"><a href="{{url}}" class="title-link">{{{title}}}</a></h2>
         <h5 class="post-excerpt">{{excerpt words="40"}}</h5>
     </div>
     {{^has tag="Roundup"}}
