--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -105,7 +105,7 @@
 			font-weight: 900;
 			font-family: 'HackerSans-Medium', 'CompassSans-Regular';
 
-			a {
+			.title-link {
 				font-size: 2.2em !important;
 			}
 			@media(max-width: 600px) {
