--- a/partials/subscribe_form.hbs
+++ b/partials/subscribe_form.hbs
@@ -1,6 +1,15 @@
-<div class="form-group{{#if error}} error{{/if}}">
-    <input id="signup-username" class="subscribe-input-class" type="text" name="username" onfocus="" placeholder="username" required>
-    {{input_email class=input_class placeholder=placeholder onfocus="" value=email autofocus=autofocus}}
-    <input id="signup-gravatar" type="text" name="gravatar" visibility="hidden" />
-    <button id="btn" type="submit" name="signup" value="Sign Up"/>Sign Up</button>
-</div>
+<form method="post" action="{{action}}" class="{{form_class}}">
+    {{! This is required for the form to work correctly }}
+    {{hidden}}
+
+    <div class="form-group{{#if error}} error{{/if}}">
+        {{input_email class=input_class placeholder=placeholder onfocus="" value=email autofocus=autofocus}}
+    </div>
+    <button class="{{button_class}}" type="submit">Subscribe</button>
+    {{! This is used to get extra info about where this subscriber came from }}
+    {{script}}
+</form>
+
+{{#if error}}
+    <p class="main-error">{{ error.message }}</p>
+{{/if}}
