--- a/src/less/postlist.less
+++ b/src/less/postlist.less
@@ -1,6 +1,15 @@
 @import "variables.less";
 @import "mixin.less";
 
+.series-template {
+  .main-content {
+    display: flex !important;
+    flex-direction: row !important;
+    min-width: -webkit-fill-available;
+  }
+}
+
+
 .tag-template, {
   .postlist {
     display: flex;
