--- a/src/less/signup.less
+++ b/src/less/signup.less
@@ -11,6 +11,7 @@
   background-image: linear-gradient(135deg, #29DAC6 0%, #329DE3 100%);
   z-index: 500;
   box-shadow: 2px 2px 28px rgba(0, 0, 0, 0.76);
+  display: none;
 
   .confirm-description,
   .description {
