--- a/src/less/code.less
+++ b/src/less/code.less
@@ -65,7 +65,7 @@
   .hljs {
     display: block;
     overflow-x: hidden!important;
-    background: #353540!important;
+    background: #262633 !important;
     overflow-wrap: break-word;
     margin: 0;
     font-weight: 200;
@@ -85,7 +85,7 @@
       font-family: 'CompassSans-Regular';
       width: 104%;
       height: auto;
-      background: #121925;
+      background: #181d25;
       content: "Code Snippet";
       display: block;
       font-style: normal;
@@ -114,14 +114,14 @@
   .language-python,
   .python.hljs {
     color: #e4f8fd !important;
-    background: #334163!important;
+    background: #2a3552!important;
 
     &::before {
       margin-bottom: 20px;
       margin-left: -40px;
       width: 110%;
       height: auto;
-      background: #28334e !important;
+      background: #1d2538!important;
       content: "Python" !important;
       display: block;
       font-style: normal;
