--- a/src/less/signup.less
+++ b/src/less/signup.less
@@ -198,7 +198,7 @@ button {
 .button-control,
 button {
   padding: 13px 0;
-  width: 330px;
+  width: -webkit-fill-available;
   color: #fff;
   background: #03ccb7;
   box-shadow: 2px 2px 3px 0 #239084;
