--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -9,6 +9,10 @@
     background-size: cover !important;
   }
 
+  .post-title {
+    font-size: 1.6em!important;
+  }
+
   .post-title a {
      font-size: 1em !important;
   }
