--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -44,7 +44,7 @@
 <script>
 $( document ).ready(function() {
   $('.sort').on('click', function(e){
-    $('.sort-method').html('desc');
+    $('.sort-method').html('asc');
     $('.sort i').addClass('flip');
   });
 });
