--- a/series.hbs
+++ b/series.hbs
@@ -12,7 +12,7 @@
 					<div class="postlist">
 						<div class="sort-container">
 							<div class="sort">
-								<span class="sort-title">Sort</span> <span class="sort-method">asc</span> <i class="fal fa-arrow-to-bottom"></i>
+								<span class="sort-title">Sort</span> <span class="sort-method">desc</span> <i class="fal fa-arrow-to-bottom"></i>
 							</div>
 							</div>
 							{{#foreach posts include="tags"}}
