--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -618,6 +618,10 @@
 			margin-right: 10px;
 		}
 
+		.recent-single-post a {
+			font-size: 15px!important;
+		}
+
 		.recent-single-post,
 		.single-author {
 			border-bottom: 1px solid #d5dde8;
