--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -99,7 +99,7 @@
 		margin: 0 0 20px;
 
 		.post-title {
-			font-size: 2.2em !important;
+			font-size: 2.2em;
 			Line-height: 1.15;
 			margin: 0 0 10px;
 			font-weight: 900;
